--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,7 @@ test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
     systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'username', System.getProperty('username', 'app')
+    systemProperty 'password', System.getProperty('password', 'pass')
+    systemProperty 'webservice.url', System.getProperty('webservice.url', 'http://localhost:8080')
 }
